# pytvision

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  hello.py  pyproject.toml  setup.cfg  setup.py  tvdemo.py  tvguid.py
swig/: CMakeLists.txt  all_uses.hpp  application.i  application.py  colors.i  dialogs.i  editors.i  menu.py  menus.i  pytvision.i  scrncell.i  system.i  typemaps.i  views.i  views.py
tvision/: CMakeLists.txt
tvision/include/tvision/: app.h  ttypes.h  views.h
