[metadata]
name = pytvision
description = Python bindings for tvision TUI library
long_description = file: README.md
long_description_content_type = text/markdown
author = Rich Wareham
author_email = rich@richwareham.com
license = MIT
platforms = any
url = https://github.com/rjw57/pytvision
project_urls =
    Source  = https://github.com/rjw57/pytvision
    Tracker = https://github.com/rjw57/pytvision/issues
keywords = tui interface ncurses tvision
classifiers =

[options]
zip_safe = False
python_requires = >=3.9
